src/assets/index.css
@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --ring: 212.7 26.8% 83.9%;
  }
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
  input,
  textarea,
  select,
  button {
    @apply text-base !important;
  }
}

html,
body {
  height: 100vh;
}

.kanit-thin {
  font-family: 'Kanit', sans-serif;
  font-weight: 100;
  font-style: normal;
}

.kanit-extralight {
  font-family: 'Kanit', sans-serif;
  font-weight: 200;
  font-style: normal;
}

.kanit-light {
  font-family: 'Kanit', sans-serif;
  font-weight: 300;
  font-style: normal;
}

.kanit-regular {
  font-family: 'Kanit', sans-serif;
  font-weight: 400;
  font-style: normal;
}

.kanit-medium {
  font-family: 'Kanit', sans-serif;
  font-weight: 500;
  font-style: normal;
}

.kanit-semibold {
  font-family: 'Kanit', sans-serif;
  font-weight: 600;
  font-style: normal;
}

.kanit-bold {
  font-family: 'Kanit', sans-serif;
  font-weight: 700;
  font-style: normal;
}

.kanit-extrabold {
  font-family: 'Kanit', sans-serif;
  font-weight: 800;
  font-style: normal;
}

.kanit-black {
  font-family: 'Kanit', sans-serif;
  font-weight: 900;
  font-style: normal;
}

.kanit-thin-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 100;
  font-style: italic;
}

.kanit-extralight-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 200;
  font-style: italic;
}

.kanit-light-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 300;
  font-style: italic;
}

.kanit-regular-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 400;
  font-style: italic;
}

.kanit-medium-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 500;
  font-style: italic;
}

.kanit-semibold-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 600;
  font-style: italic;
}

.kanit-bold-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 700;
  font-style: italic;
}

.kanit-extrabold-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 800;
  font-style: italic;
}

.kanit-black-italic {
  font-family: 'Kanit', sans-serif;
  font-weight: 900;
  font-style: italic;
}

